--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <p>Just Waiting for graduation to finish.</p>
         <div>Name: Bipana Shrestha</div>
         <div>Address: Pepsicola</div>
-        <div style="width: 100px; height: 100px;"><img src="pic1.jpg"></div>
+        <div ><img style="width: 100px; height: 100px;" src="pic1.jpg"></div>
     </body>
 </html>
